# intervals-icu-fitnotes

./: .env.example  .gitignore  README.md  pyproject.toml
data/: FitNotesWorkouts.csv  FitNotesWorkouts.example.csv
src/intervals_icu_fitnotes/: __init__.py  cli.py  fitnotes.py  intervals.py  sync.py
tests/: test_cli.py  test_fitnotes.py  test_intervals.py  test_sync.py
