[project]
name = "intervals-icu-fitnotes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Melvin Redon", email = "melvin.redon@icloud.com" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.34.2",
]

[project.scripts]
intervals-icu-fitnotes = "intervals_icu_fitnotes:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]
